# config

./: CMakeLists.txt  README.md
.github/workflows/: build-test-gcc-12.yml  build-test-gcc-13.yml  build-test-gcc-14.yml  cmake-multi-platform.yml  release.yml  version-gcc-13.yml  version-test.yml
.github/workflows/version/gcc/: version-gcc-12.yml  version-gcc-14.yml
include/genogrove/config/: version.hpp.in
tests/: CMakeLists.txt  version_test.cpp
